Adds overview for products
Shows overview for products

--- a/WebContent/header.jspf
+++ b/WebContent/header.jspf
@@ -16,6 +16,7 @@
 			<ul>
 				<li  id="actual"><a href="Controller">Home</a></li>
 				<li><a href="Controller?action=overview">Overview</a></li>
+				<li><a href="Controller?action=products">Products</a></li>
 				<li><a href="Controller?action=signUp">Sign up</a></li>
 			</ul>
 		</nav>
