--- a/WebContent/header.jspf
+++ b/WebContent/header.jspf
@@ -1,3 +1,4 @@
+<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <!DOCTYPE html>
@@ -14,13 +15,26 @@
 		<h1><span>User Management System</span></h1>
 		<nav>
 			<ul>
-				<li  id="actual"><a href="Controller">Home</a></li>
-				<li><a href="Controller?action=overview">Overview</a></li>
-				<li><a href="Controller?action=products">Products</a></li>
-				<li><a href="Controller?action=signUp">Sign up</a></li>
+				
+				<li class="<c:out value="${empty param['action'] ? 'current' : ''}"/>"><a href="Controller">Home</a></li>
+
+				<li class="<c:out value="${param['action'] == 'overview' ? 'current' : ''}"/>">
+					<a href="Controller?action=overview">Overview</a>
+				</li>
+				<li class="<c:out value="${param['action'] == 'products' ? 'current' : ''}"/>">
+					<a href="Controller?action=products">Products</a>
+				</li>
+				<li class="<c:out value="${param['action'] == 'signUp' ? 'current' : ''}"/>">
+					<a href="Controller?action=signUp">Sign up</a>
+				</li>
 			</ul>
 		</nav>
 	<h2>
+		<c:if test="${empty param['action']}">
 		Home
+		</c:if>
+		<c:if test="${not empty param['action']}">
+		${param['action']}
+		</c:if>
 	</h2>
 </header>
